@@ -13,6 +13,8 @@ sub init_cs_ban {
 	}
 	cmd_add("chanserv/ban", "Bans a user from a given channel", "BAN allows you to place a ban on a user in \nyour channel or any other channel you have \nthe +k flag in. \n[T]\nSyntax: BAN <#channel> <nickname>", \&svs_cs_ban);
 	cmd_add("chanserv/unban", "Bans a user from a given channel", "UNBAN allows you to remove a ban placed on a \nuser in your channel or any other channel \nyou have the +k flag in. \n[T]\nSyntax: UNBAN <#channel> <nickname>", \&svs_cs_unban);
+	fantasy("ban", 1);
+	fantasy("unban", 1);
 
 	if (!flag_exists("k")) {
 		flaglist_add("k", "Allows the use of the KICK,BAN,and KICKBAN commands");
