@@ -12,6 +12,7 @@ sub init_cs_clear {
 		module_load("chanserv/main");
 	}
 	cmd_add("chanserv/clear", "Clears certain channel aspects.", "CLEAR will allow you to clear certain things\nCLEAR USERS for one, can be useful if you are closing your channel.\n[T]\nSyntax: CLEAR <#channel> <users|flags|bans>", \&svs_cs_clear);
+	fantasy("clear", 1);
         if (!flag_exists("C")) {
                 flaglist_add("C", "Allows the use of the CLEAR command");
         }
