@@ -12,6 +12,7 @@ sub init_cs_info {
 		module_load("chanserv/main");
 	}
 	cmd_add("chanserv/info", "Display information about a channel.", "INFO will display channel information such as\nregistration date and time, settings, founder\n,and other details.\n[T]\nSyntax: INFO <channel>", \&svs_cs_info);
+	fantasy("info", 1);
 }
 
 sub void_cs_info {
