@@ -12,6 +12,7 @@ sub init_cs_kickban {
 		module_load("chanserv/main");
 	}
 	cmd_add("chanserv/kickban", "Kicks and Bans a user from a given channel", "KICKBAN allows you to place a ban on a user in \nyour channel or any other channel and kick \nthem at the same time providing you have \nthe +k flag. \n[T]\nSyntax: KICKBAN <#channel> [nickname] [reason]", \&svs_cs_kickban);
+	fantasy("kickban", 1);
 
 	if (!flag_exists("k")) {
 		flaglist_add("k", "Allows the use of the KICK,BAN,and KICKBAN commands");
