@@ -23,6 +23,8 @@ sub init_cs_owner {
 	}
 	cmd_add("chanserv/owner", "Owners you or another user on a channel.", "OWNER will allow you to either owner \nyourself or another user in a channel\nthat you have the +q flag in.\n[T]\nSyntax: OWNER <#channel> [user]", \&svs_cs_owner);
 	cmd_add("chanserv/deowner", "Deowners you or another user on a channel.", "DEOWNER will allow you to either\ndeowner yourself or another user in\na channel that you have the +q flag in.\n[T]\nSyntax: DEOWNER <#channel> [user]", \&svs_cs_deowner);
+	fantasy("owner", 1);
+	fantasy("deowner", 1);
 	if (!flag_exists("q")) {
 		flaglist_add("q", "Allows the use of the OWNER/DEOWNER command");
 	}
